SFDC Automation/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Solutions_Interest__c</fullName>
        <label>Solutions Interest</label>
        <picklist>
            <picklistValues>
                <fullName>FMS/SCS Cross Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL VOSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS – Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS – Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS – On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS – On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS – Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Sales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <label>Status Category</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>FMS Law Drafting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Party Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Management Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Documents/ Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (see comments)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney Reviewing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <controllingField>Major_Category__c</controllingField>
            <picklistValues>
                <fullName>1099 Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099 Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099 Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120-day Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-day Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45-day Threat to Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-day Process Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-day Cancellation Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:1099 Transfer x6628</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Check Clear Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Check Copy/Remittance Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Chimes-Vendor Referred to VS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Invoice Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Location Charged Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Location Invoice Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Payment Status - vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:RCRC Invoice Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:RCRC P.O. Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Vendor Information Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:Vendor Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P:W-9 Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Admin Vendor (SSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Credit Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/P Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R:Credit Card Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R:Credit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R:Lock box address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R:Open Items Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R:Payment Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_line__c</fullName>
        <formula>TEXT(Subcategory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Categoryhidden__c</fullName>
        <description>this hidden field will be populated by a workflow rule</description>
        <label>Summary Category hidden</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Manager__c</fullName>
        <description>This hidden field will be populated by a workflow rule</description>
        <label>Supervisor/Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Pay_Total_Amount__c  +  Fee_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trip_Record_Case_Priority_Date__c</fullName>
        <label>Trip Record Case Priority Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle #</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Cases (Vehicle)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_number_for_non_lease_units__c</fullName>
        <description>Field to enter a non-lease vehicle in a ComData case</description>
        <inlineHelpText>Use this field to enter a non-lease vehicle in a ComData case</inlineHelpText>
        <label>Vehicle number for non-lease units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <description>Date when the FMM visited the branch</description>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Major_Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>Case_Age_In_Business_Hours__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Ownership_Validations_2014</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity_Case__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Original_Decision_Maker__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Ownership_Validations</value>
        </filters>
        <label>All Ownership Validations 2014</label>
        <sharedTo>
            <group>Ownership_Validations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_Clasification</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Cases Clasification</label>
    </listViews>
    <listViews>
        <fullName>Created_today</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created today</label>
    </listViews>
    <listViews>
        <fullName>Customer_Care_Level_2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Care Level 2</label>
        <queue>Customer_Care_Level_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Legal_Cases</value>
        </filters>
        <label>Legal Cases</label>
    </listViews>
    <listViews>
        <fullName>Level_2_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Level 2 Cases</label>
        <queue>Customer_Care_Level_2</queue>
        <sharedTo>
            <group>SystemAdmin</group>
            <roleAndSubordinates>ServiceTeamManagement</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Subject_line__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>Subject_line__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Case_Age_In_Business_Hours__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Over_the_wall_cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OSF_Assignment__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>Case_to_be_resolved_outside_of_SFDC__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Over the wall cases</label>
    </listViews>
    <listViews>
        <fullName>Ownership_Validations</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Lessee_Number__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Opportunity_Case__c</columns>
        <columns>Original_Decision_Maker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Ownership_Validations</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Completed</value>
        </filters>
        <label>Ownership Validations</label>
        <sharedTo>
            <group>Ownership_Validations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Proposal_Assistance</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Proposal_Response</value>
        </filters>
        <label>Proposal Assistance</label>
    </listViews>
    <listViews>
        <fullName>Proposal_Response_Team</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Proposal_Due_Date__c</columns>
        <columns>Opportunity_Case__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Proposal Response Team</label>
        <queue>Proposal_Response_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Case_for_Known_Acct</fullName>
        <active>true</active>
        <businessProcess>Cases for Known Accounts</businessProcess>
        <description>Used for cases where you have identified the Account</description>
        <label>Case for Known Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_for_Unknown_Account</fullName>
        <active>true</active>
        <businessProcess>Cases for Unknown Accounts</businessProcess>
        <description>Used for cases where you have not identified the Account</description>
        <label>Case for Unknown Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_for_Vehicle_Purchasing</fullName>
        <active>true</active>
        <businessProcess>Vehicle Purchasing</businessProcess>
        <description>This case record type will be used by field sales to create cases for the Vehicle Purchasing department.</description>
        <label>Case for Vehicle Purchasing</label>
    </recordTypes>
    <recordTypes>
        <fullName>ComData_Case</fullName>
        <active>true</active>
        <businessProcess>Cases for Known Accounts</businessProcess>
        <description>Use for ComData checks.</description>
        <label>ComData Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Cases</fullName>
        <active>true</active>
        <businessProcess>Legal Cases</businessProcess>
        <description>Cases to be handled by legal cases</description>
        <label>Legal Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>NAFMM</fullName>
        <active>true</active>
        <businessProcess>NAFMM</businessProcess>
        <description>National FIeld Maintenance mangers case to mirror JKT system them currently use</description>
        <label>NAFMM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ownership_Validations</fullName>
        <active>true</active>
        <businessProcess>Ownership Validations</businessProcess>
        <description>When an opportunity is won from ownership we need to verify that that is true creating a case</description>
        <label>Ownership Validations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposal_Response</fullName>
        <active>true</active>
        <businessProcess>RFP Response</businessProcess>
        <description>As part of the Proposal Management Process</description>
        <label>Proposal Response</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSM_Cases</fullName>
        <active>true</active>
        <businessProcess>RSM Support Process</businessProcess>
        <description>These are cases related to RydeSmart issues created by the RydeSmart team</description>
        <label>RSM Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Pilot</fullName>
        <active>false</active>
        <businessProcess>Cases for Known Accounts</businessProcess>
        <description>Used for the Customer Advocate Pilot.</description>
        <label>Sales Pilot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trip_Record_Cases</fullName>
        <active>true</active>
        <businessProcess>Compliance Cases</businessProcess>
        <description>Cases handled by Compliance Team</description>
        <label>Trip Record Cases</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Allowed_to_Update_Status</fullName>
        <active>true</active>
        <description>Only some profiles are allowed Update Case Status</description>
        <errorConditionFormula>AND(
  ISCHANGED(Status),
 ($Profile.Name &lt;&gt;&apos;Legal&apos;)
&amp;&amp; ($Profile.Name&lt;&gt;&apos;System Administrator&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;SSO System Administrator&apos;)  
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Business Admin&apos;) 
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Business Admin Non SSO&apos;) 
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Bulk Delete System Administrator&apos;) 
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Service&apos;) 
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Service Manager&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Service - Non SSO&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Case User&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;FMC-Until-April-30&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;Marketing Automation TSA&apos;)
&amp;&amp; ($Profile.Name &lt;&gt; &apos;FMC&apos;) 
 )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Not allowed to Update Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Loop_Requires_Survey_Activity</fullName>
        <active>true</active>
        <description>Closed Loop requires a survey activity.</description>
        <errorConditionFormula>AND 
( 
OR( ISPICKVAL(Origin,&apos;Customer Sat Survey&apos; ) || CONTAINS( TEXT(Origin) , &apos;CSI Closed Loop&apos;)),ISBLANK(Activity_ID__c)
&amp;&amp; 
(( RecordType.Name = &apos;Case for Known Account&apos; )|| (RecordType.Name = &apos;Case for Unknown Account&apos;) || (RecordType.Name = &apos;ComData Case&apos;))
)</errorConditionFormula>
        <errorMessage>Closed Loop cases must be created from the Survey Activity using the Create Case button.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_information_required</fullName>
        <active>true</active>
        <description>Contact Name, Salesforce user name or Ryder employee name must be filled in.</description>
        <errorConditionFormula>Contact.Id =&quot;&quot;&amp;&amp; Contact__c=&quot;&quot;&amp;&amp; ISBLANK(Salesforce_User__c)  &amp;&amp; ISBLANK(Ryder_Employee__c )  
&amp;&amp; (($RecordType.Name &lt;&gt; &apos;ComData Case&apos;) 
&amp;&amp; ($RecordType.Name  &lt;&gt; &apos;Legal Cases&apos;)
&amp;&amp; ($RecordType.Name  &lt;&gt; &apos;Ownership Validations&apos;)
&amp;&amp; ($RecordType.Name  &lt;&gt; &apos;Proposal Response&apos;) 
&amp;&amp; ($RecordType.Name  &lt;&gt; &apos;NAFMM&apos;) 
&amp;&amp; ($RecordType.Name &lt;&gt; &apos;Case for Vehicle Purchasing&apos;) 
&amp;&amp; ($RecordType.Name &lt;&gt; &apos;Trip Record Cases&apos;))</errorConditionFormula>
        <errorMessage>Please enter a value in one of the three fields (Contact name, or Salesforce user name or Ryder employee name)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corrective_Action</fullName>
        <active>true</active>
        <description>Corrective Action field cannot be blank when the case is closed.  Information must be completed.</description>
        <errorConditionFormula>ISBLANK(Corrective_Action__c)  &amp;&amp; (ISPICKVAL(Status,&quot;closed&quot;))
&amp;&amp; ( RecordType.Name = &apos;Case for Known Account&apos; 
|| RecordType.Name = &apos;Case for Unknown Account&apos; 
|| RecordType.Name = &apos;Comdata Case&apos;)</errorConditionFormula>
        <errorDisplayField>Corrective_Action__c</errorDisplayField>
        <errorMessage>Please complete information about the corrective action taken to resolve the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Early_Termination_Needs_Reason</fullName>
        <active>true</active>
        <description>For Early Termination Provide Reason</description>
        <errorConditionFormula>INCLUDES(Amendments__c, &quot;Early Termination (Needs Approval)&quot;)
&amp;&amp;(RecordTypeId &lt;&gt; &apos;012J00000004WBj&apos;)
&amp;&amp;(ISBLANK(Early_Termination_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>Early_Termination_Reason__c</errorDisplayField>
        <errorMessage>Early Termination Needs a Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legal_Case_Cannot_Edit</fullName>
        <active>true</active>
        <description>Legal case once created cannot be edited by Sales people</description>
        <errorConditionFormula>((RecordType.Name = &apos;Legal Cases&apos;) &amp;&amp;
($Profile.Name &lt;&gt; &apos;Legal&apos; &amp;&amp;
 $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp;
 $Profile.Name &lt;&gt; &apos;Business Admin&apos;) &amp;&amp;  NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Legal case cannot be edited by field sales once it is created and assigned to legal team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_First_Call_Resolution_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW())  &amp;&amp; 
( ISPICKVAL(Origin,&apos;Customer Sat Survey&apos; )  || CONTAINS( TEXT(Origin) , &apos;CSI Closed Loop&apos;) )   &amp;&amp;
 ISPICKVAL( Status , &apos;Closed&apos;) &amp;&amp; 
ISPICKVAL(  First_Call_Resolution__c  , &apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>First_Call_Resolution__c</errorDisplayField>
        <errorMessage>Did you verified all cases to same Major/Sub Category?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_required_if_Case_OSF_is_checked</fullName>
        <active>true</active>
        <errorConditionFormula>Case_to_be_resolved_outside_of_SFDC__c &amp;&amp; isblank( OSF_Assignment__c)</errorConditionFormula>
        <errorDisplayField>OSF_Assignment__c</errorDisplayField>
        <errorMessage>OSF Assignment is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_vehicle_in_Comdata_case</fullName>
        <active>false</active>
        <description>In a Comdata case, the vehicle number for non-lease unit is there to enter a value only when there is no normal vehicle numbers. Both cannot be specified as this is only about one vehicle</description>
        <errorConditionFormula>and(not(isnull(Vehicle_Number__c)),not(isnull( Vehicle_number_for_non_lease_units__c )))</errorConditionFormula>
        <errorMessage>Only enter a vehicle for non-lease unit if you don&apos;t have a Ryder lease vehicle number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_team_not_able_to_edit_closed_cas</fullName>
        <active>true</active>
        <errorConditionFormula>IsClosed= TRUE &amp;&amp;
 $User.ProfileId = &quot;00e60000001BP6P&quot;</errorConditionFormula>
        <errorMessage>Service Team cannot modify a closed case.</errorMessage>
    </validationRules>
</CustomObject>